--- a/DZIEN_2_Lakehouse_Delta_Lake/03_medallion_architecture.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/03_medallion_architecture.ipynb
@@ -770,7 +770,7 @@
     "    .option(\"inferSchema\", \"true\")\n",
     "    .load(customers_path)\n",
     "    # Dodaj metadata columns (jak w Lakeflow)\n",
-    "    .withColumn(\"source_file_path\", F.input_file_name())\n",
+    "  #  .withColumn(\"source_file_path\", F.input_file_name())\n",
     "    .withColumn(\"ingestion_ts\", F.current_timestamp())\n",
     "    .withColumn(\"load_ts\", F.current_timestamp())\n",
     ")\n",
@@ -803,7 +803,7 @@
     "    .format(\"parquet\")\n",
     "    .load(products_path)\n",
     "    # Dodaj metadata columns (jak w Lakeflow)\n",
-    "    .withColumn(\"source_file_path\", F.input_file_name())\n",
+    " #   .withColumn(\"source_file_path\", F.input_file_name())\n",
     "    .withColumn(\"ingestion_ts\", F.current_timestamp())\n",
     "    .withColumn(\"load_ts\", F.current_timestamp())\n",
     ")\n",
@@ -844,7 +844,7 @@
     "    .load(orders_path)\n",
     "    # Dodaj metadata columns (jak w Lakeflow)\n",
     "    .withColumn(\"source_system\", F.lit(\"batch\"))\n",
-    "    .withColumn(\"source_file_path\", F.input_file_name())\n",
+    "    #.withColumn(\"source_file_path\", F.input_file_name())\n",
     "    .withColumn(\"ingestion_ts\", F.current_timestamp())\n",
     "    .withColumn(\"load_ts\", F.current_timestamp())\n",
     ")\n",
@@ -1061,6 +1061,29 @@
     "### Przykład 2.1: Bronze → Silver Transformation (Orders)\n",
     "\n",
     "**Cel:** Transform orders z Bronze do Silver z cleansing i validation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "efe7b9d0-93b2-4b84-9ccd-d94712b7991c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Bronze → Silver: Orders (zgodne z modelem Lakeflow)\n",
+    "bronze_orders = spark.table(f\"{BRONZE_SCHEMA}.orders_raw\").dropDuplicates([\"customer_id\"])\n",
+    "bronze_orders.write.format(\"delta\").mode(\"overwrite\").saveAsTable(f\"{BRONZE_SCHEMA}.orders_raw\")"
    ]
   },
   {
@@ -1364,6 +1387,7 @@
     "        \"city\", \"state\", \"country\", \"registration_date\", \"customer_segment\",\n",
     "        \"updated_at\"\n",
     "    )\n",
+    "   # .dropDuplicates([\"customer_id\"])  # Remove duplicates by customer_id\n",
     ")\n",
     "\n",
     "# Create/Replace table (Type 1 = overwrite)\n",
@@ -2177,6 +2201,37 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a5a84798-e68b-41f6-8847-700c4f780de0",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1764309804934}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "\n",
+    "display(spark.table(f\"\"\"{GOLD_SCHEMA}.dim_customer\"\"\" ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
       "rowLimit": 10000
      },
      "inputWidgets": {},
@@ -2201,8 +2256,8 @@
     "        country,\n",
     "        registration_date,\n",
     "        customer_segment\n",
-    "    FROM {SILVER_SCHEMA}.customers_type2\n",
-    "    WHERE __END_AT IS NULL\n",
+    "    FROM {SILVER_SCHEMA}.customers_type1\n",
+    "  --  WHERE status = 'CURRENT'\n",
     "\"\"\")\n",
     "\n",
     "dim_customer.write.format(\"delta\").mode(\"overwrite\").saveAsTable(f\"{GOLD_SCHEMA}.dim_customer\")\n",
@@ -2212,6 +2267,35 @@
     "    \"records\": dim_customer.count(),\n",
     "    \"status\": \"✅ Created\"\n",
     "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "fb160861-c8e3-4403-be7d-7e79aa0c5a1d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "from pyspark.sql import functions as F\n",
+    "\n",
+    "display(\n",
+    "    spark.table(f\"{GOLD_SCHEMA}.dim_customer\")\n",
+    "    .agg(\n",
+    "        F.count(\"customer_id\").alias(\"all_customer_count\"),\n",
+    "        F.count_distinct(\"customer_id\").alias(\"distinct_customer_count\")\n",
+    "    )\n",
+    ")"
    ]
   },
   {
