--- a/DZIEN_2_Lakehouse_Delta_Lake/04_optimization_best_practices.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/04_optimization_best_practices.ipynb
@@ -401,7 +401,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "676205fd-452f-43c1-a452-8072b6513717",
      "showTitle": false,
@@ -1254,6 +1257,38 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "2f1d45a9-4afa-4f72-a989-d4ffef704164",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1764310848426}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Sprawdź liczbę partycji i plików w tabeli Delta\n",
+    "df_detail = spark.sql(f\"DESCRIBE DETAIL {ORDERS_PARTITIONED}\")\n",
+    "display(\n",
+    "    df_detail#.select(\"partitionColumns\", \"numFiles\")\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "17aed8d8-935a-4e52-9243-be7f85ecdf19",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -1262,17 +1297,21 @@
    },
    "outputs": [],
    "source": [
-    "# Repartition vs Coalesce - różnice\n",
+    "# Repartition vs Coalesce - differences\n",
     "\n",
-    "# REPARTITION - pełny shuffle, równomierny rozkład danych\n",
-    "# Użyj gdy: potrzebujesz więcej partycji LUB równomiernego rozkładu\n",
+    "# REPARTITION - full shuffle, even data distribution\n",
     "orders_repartitioned = orders_df.repartition(10)\n",
-    "print(f\"Po repartition(10): {orders_repartitioned.rdd.getNumPartitions()} partycji\")\n",
+    "display(\n",
+    "    spark.sql(f\"DESCRIBE DETAIL {ORDERS_PARTITIONED}\")\n",
+    "    .select(\"numFiles\")\n",
+    ")\n",
     "\n",
-    "# COALESCE - bez shuffle, tylko łączenie partycji (narrow transformation)\n",
-    "# Użyj gdy: zmniejszasz liczbę partycji (np. przed zapisem)\n",
+    "# COALESCE - no shuffle, only merges partitions (narrow transformation)\n",
     "orders_coalesced = orders_df.coalesce(4)\n",
-    "print(f\"Po coalesce(4): {orders_coalesced.rdd.getNumPartitions()} partycji\")"
+    "display(\n",
+    "    spark.sql(f\"DESCRIBE DETAIL {ORDERS_PARTITIONED}\")\n",
+    "    .select(\"numFiles\")\n",
+    ")"
    ]
   },
   {
