--- a/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
@@ -367,8 +367,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "46afbd65-87cd-45a2-b795-851a6561755f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "outputs": [],
    "source": [
     "# Opcjonalnie: Programowe tworzenie Model Serving Endpoint\n",
@@ -579,7 +591,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "%skip \n",
+    "%skip\n",
     "%pip install databricks-vectorsearch\n",
     "dbutils.library.restartPython()"
    ]
